--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
    <head>
-      <title>RTNMU-PEMS</title>
+      <title>RT-NMU Practical Exam Management System</title>
       <link rel="icon" type="image/png" href="/images/logo.png">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <base target="_top">
